--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-types": "^6.23.0",
     "babylon": "^6.16.1",
     "cheerio": "^0.22.0",
+    "cors": "^2.8.1",
     "express": "^4.15.2",
     "express-http-proxy": "^0.11.0",
     "http-shutdown": "^1.2.0",
